# sixad_rumble

./: CMakeLists.txt  README.md  package.xml
include/sixad_rumble/: RumbleEventDriver.hpp
launch/: rumble_event_node.launch
misc/: 10-gamepads.rules
nodes/: RumbleEventDriver.py
src/: RumbleEventDriver.cpp  RumbleEventNode.cpp  test_rumble.cpp
