<?xml version="1.0"?>
<package>
  <name>sixad_rumble</name>
  <version>0.0.0</version>
  <description>The sixad_rumble package</description>

  <maintainer email="anqi.xu@mail.mcgill.ca">Anqi Xu</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>sensor_msgs</run_depend>
</package>
